--- a/platt_macros/Cargo.toml
+++ b/platt_macros/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 syn = { version = "1.0", features = ["full", "derive"] }
 proc-macro2 = "1.0"
 quote = "1.0"
+heck = "0.3"
 darling = "0.12.2"
 
 [lib]
